<resources>
    <string name="app_name">final</string>
    <string name="title_activity_map__dash">Map</string>

    <string name="btnSearch">SEARCH</string>
    <string name="btnAddHomeLocation">Add Home Lacation</string>
    <string name="btnAddHomeSubmit">Submit Your Home Add</string>
    <string name="btnAddHomegoback">Go Back</string>

    <string name="btnAddHomePhotos">Add Home Photos</string>
    <string name="searchAdd">SEARCH ADD</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnPostAdd">POST ADD</string>
    <string name="txtusername">Username</string>
    <string name="txtfirstname">First Name</string>
    <string name="txtlastname">Last Name</string>
    <string name="txCity">City</string>
    <string name="txtnic">NIC</string>
    <string name="txtdob">DOB</string>
    <string name="txtgender">Gender</string>
    <string name="txtmale">Male</string>
    <string name="txtfemale">Female</string>
    <string name="txtcontact">Contact Number</string>
    <string name="txtemail">E Mail</string>
    <string name="txtpassword">●●●●●●●</string>
    <string name="txtpassword2">Password</string>
    <string name="txtreenterpassword">Re Enter Password</string>
    <string name="ForgotYourPassword">Forgot Password</string>
    <string name="txtSearchByLocation">Search By Location</string>
    <string name="txtRoomNumber">Number of Rooms</string>
    <string name="btnSignUp">Signup</string>
    <string name="btnLogin">Login</string>
    <string name="txtLogin">Login</string>
    <string name="txtAddress">Address</string>
    <string name="txtDescription">Description</string>
    <string name="txtKeyFee">Key Fee</string>
    <string name="txtMounthlyFee">Mounthly Fee</string>
    <string name="txtHouse">House</string>
    <string name="txtStare">Stare</string>
    <string name="txtYes">Yes</string>
    <string name="txtNo">No</string>
    <string name="txtRoom">Room</string>
    <string name="GetVerificationLink">Get Verification Link</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="Home">Home</string>
    <string name="Stare">Stare</string>
    <string name="Room">Room</string>
    <string name="Dashboard">Dashboard</string>
    <string name="SelectAddType">Select Add Type</string>

    <string name="EditProfiles">Edit Profile</string>
    <string name="UpdateProfile">Update Profile</string>
    <string name="UpdatePassword">Update Password</string>
    <string name="MyAdd">MY ADD</string>
    <string name="Profilr">Profile</string>


    <string name="title_activity_login_user_dashboard">LoginUserDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map__dash__final">Map</string>
    <string name="title_activity_set__map__location">Map</string>
    <string name="title_activity_set__current__location">Map</string>
    <string name="title_activity_callback_map__dash">Map</string>


    //-------------------------------water supply---------------------------------------------------
    <string name="radio_well">Well(Using Moter)</string>
    <string name="radio_tapline">Water Board(Tapline)</string>
    <string name="radio_both">Have these two types</string>

    //-------------------------------Kitchen Garage-------------------------------------------------
    <string name="radio_male">Yes</string>
    <string name="radio_female">No</string>

    //--------------------------------Bathroom------------------------------------------------------
    <string name="radio_attach">Attached</string>
    <string name="radio_nonattach">Non-Attached</string>

    //--------------------------------Room Condition------------------------------------------------
    <string name="radio_ac">A/C</string>
    <string name="radio_nonac">Non A/C</string>

    //--------------------------------Stair case Type-----------------------------------------------
    <string name="radio_stairin">In Side</string>
    <string name="radio_stairout">Out Side</string>
    <string name="radio_stairno">No Stair(Basement)</string>


    //---------------------------------Room---------------------------------------------------------

    //-------------------------------Room type------------------------------------------------------
    <string name="radio_roomtypeinside">Inside House</string>
    <string name="radio_roomtypeseparate">Separate</string>
    <string name="radio_roomtypeattached">Attached</string>

    //-------------------------------Room
    Member------------------------------------------------------
    <string name="radio_room_one_member">One person</string>
    <string name="radio_room_more_thanone_member">More than One</string>
    <string name="radio_room_can_descuss_member">It can Arrange</string>

    //-------------------------------Register sex-------------------------------------------------
    <string name="radio_gendermale">Male</string>
    <string name="radio_genderfemale">Female</string>

</resources>
