<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtuserftyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/roundtextfeild3"
            android:drawableLeft="@drawable/ic_magnifying_glass"
            android:drawablePadding="20dp"
            android:hint="@string/txtSearchByLocation"
            android:inputType="text"
            android:paddingLeft="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/checkMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="@string/txtRoom"
                android:textColor="@color/hint" />

            <CheckBox
                android:id="@+id/checkFemghale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/txtStare"
                android:textColor="@color/hint" />

            <CheckBox
                android:id="@+id/checkFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/txtHouse"
                android:textColor="@color/hint" />


        </LinearLayout>

        <EditText
            android:id="@+id/txtuserftyn54ame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/roundtextfeild3"
            android:drawableLeft="@drawable/ic_door"
            android:drawablePadding="20dp"
            android:hint="@string/txtRoomNumber"
            android:inputType="number"
            android:paddingLeft="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />




        <Button
            android:id="@+id/btnLoginz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundbtn2"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/btnSearch"
            android:textColor="#fff" />


    </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalScrollbarPosition="right">

        <LinearLayout
            android:id="@+id/searchlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>



    </ScrollView>


</LinearLayout>