<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration_Dash">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">



        </LinearLayout>



    </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_edite_fname"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundtextfeild2"
                    android:drawablePadding="20dp"
                    android:hint="@string/txtfirstname"
                    android:inputType="text"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp" />
                <EditText
                    android:id="@+id/et_edite_lname"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="25dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundtextfeild2"
                    android:drawablePadding="20dp"
                    android:hint="@string/txtlastname"
                    android:inputType="text"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_edite_City"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextfeild2"
                android:drawablePadding="20dp"
                android:hint="@string/txCity"
                android:inputType="text"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_edite_nic"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundtextfeild2"
                    android:drawablePadding="20dp"
                    android:hint="@string/txtnic"
                    android:inputType="text"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp" />

                <EditText
                    android:id="@+id/txtdob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="2"
                    android:background="@drawable/roundtextfeild2"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:focusable="false"
                    android:hint="@string/txtdob"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />


            </LinearLayout>




            <EditText
                android:id="@+id/et_edite_ContactNum"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextfeild2"
                android:drawablePadding="20dp"
                android:hint="@string/txtcontact"
                android:inputType="number"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/et_edite_email"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextfeild2"
                android:drawablePadding="20dp"
                android:hint="@string/txtemail"
                android:inputType="textEmailAddress"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp" />


            <Button
                android:id="@+id/btnsubmit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/roundbtn2"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/UpdateProfile"
                android:textColor="#fff"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp" />


            <EditText
                android:id="@+id/et_edite_password"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextfeild2"
                android:drawablePadding="20dp"
                android:hint="@string/txtpassword2"
                android:inputType="textPassword"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/et_edite_repassword"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextfeild2"
                android:drawablePadding="20dp"
                android:hint="@string/txtreenterpassword"
                android:inputType="textPassword"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp" />

            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/roundbtn2"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/UpdatePassword"
                android:textColor="#fff"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp" />





        </LinearLayout>
    </ScrollView>







</LinearLayout>