<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration_Dash">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/logoblue"
                android:layout_gravity="bottom"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="35dp"
                android:text="Signup"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp"
                android:fontFamily="@font/montserrat_bold"/>



        </LinearLayout>


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/logoblue"
                android:layout_marginBottom="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etfname"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundtextfeild2"
                    android:drawablePadding="20dp"
                    android:hint="@string/txtfirstname"
                    android:inputType="text"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp" />
                <EditText
                    android:id="@+id/etlname"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="25dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundtextfeild2"
                    android:drawablePadding="20dp"
                    android:hint="@string/txtlastname"
                    android:inputType="text"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etCity"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextfeild2"
                android:drawablePadding="20dp"
                android:hint="@string/txCity"
                android:inputType="text"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etnic"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundtextfeild2"
                    android:drawablePadding="20dp"
                    android:hint="@string/txtnic"
                    android:inputType="text"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp" />

                <EditText
                    android:id="@+id/txtdob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="2"
                    android:background="@drawable/roundtextfeild2"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:focusable="false"
                    android:hint="@string/txtdob"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="25dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="Gender"/>

                    <RadioGroup
                        android:id="@+id/radio_registration_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_sexmale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/radio_gendermale"
                            android:textColor="@color/hint"
                            android:checked="true"/>

                        <RadioButton
                            android:id="@+id/radio_sexfemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/radio_genderfemale"
                            android:textColor="@color/hint" />
                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>


            <EditText
                android:id="@+id/etContactNum"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextfeild2"
                android:drawablePadding="20dp"
                android:hint="@string/txtcontact"
                android:inputType="number"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/etemail"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextfeild2"
                android:drawablePadding="20dp"
                android:hint="@string/txtemail"
                android:inputType="textEmailAddress"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp" />


            <EditText
                android:id="@+id/etpassword"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextfeild2"
                android:drawablePadding="20dp"
                android:hint="@string/txtpassword2"
                android:inputType="textPassword"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/etrepassword"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextfeild2"
                android:drawablePadding="20dp"
                android:hint="@string/txtreenterpassword"
                android:inputType="textPassword"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp" />

            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/roundbtn2"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/btnSignUp"
                android:textColor="#fff"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                    <Button
                        android:id="@+id/tvgobackloginreg"
                        android:gravity="left|center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/nobackgroundbtn"
                        android:text="@string/txtLogin"
                        android:textColor="@color/colorPrimary" />

        </LinearLayout>

            <TextView
                android:id="@+id/txtErrorDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWarning"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:layout_marginRight="30dp"
                />


        </LinearLayout>
    </ScrollView>







</LinearLayout>